feat: add sdk v0.3 logspec hint examples